docs(readme): 更新项目名称为CyberThreatHunter并完善文档
- 将项目名称从"全面漏洞扫描工具"更改为"CyberThreatHunter - 网络威胁猎手"
- 在main.py中更新程序横幅显示新的项目名称和二次开发作者信息
- 在所有模块文件中更新文件头注释以反映新项目名称
- 在config.yaml中更新配置文件标题
- 在requirements.txt中更新依赖库描述
- 扩展.gitignore文件以包含更多Python相关忽略规则
- 在README.md中更新项目标题和最后更新日期

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-# 漏洞扫描工具依赖
+# CyberThreatHunter 依赖库
+# 专业的网络漏洞扫描与安全审计工具
+# https://github.com/CyberThreatHunter
+
 # 网络扫描和漏洞检测库
 requests==2.31.0
 beautifulsoup4==4.12.2
