feat(config): 更新用户代理配置以支持更多设备类型
- 添加三星手机系列的用户代理字符串
- 添加小米手机的用户代理字符串
- 添加OPPO/Vivo/Realme品牌设备的用户代理字符串
- 添加OnePlus设备的用户代理字符串
- 添加华为/Honor设备的用户代理字符串
- 添加海外手机品牌如Pixel、Moto等的用户代理字符串
- 添加iPhone各型号的用户代理字符串
- 添加Apple Watch设备的用户代理字符串
- 添加Wear OS和Samsung Galaxy Watch的用户代理字符串
- 添加Garmin设备的用户代理字符串
- 添加Windows、macOS、Linux平台Chrome浏览器的用户代理字符串
- 添加各平台Firefox浏览器的用户代理字符串
- 添加Android/iOS平台Edge浏览器的用户代理字符串

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -22,7 +22,101 @@ scanning:
     - "Mozilla/5.0 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)"
     - "Mozilla/5.0 (compatible; Bingbot/2.0; +http://www.bing.com/bingbot.htm)"
     - "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Edg/120.0.0.0"
-  
+    - # 三星手机
+    - "Mozilla/5.0 (Linux; Android 13; SM-S918B) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Mobile Safari/537.36"
+    - "Mozilla/5.0 (Linux; Android 12; SM-G991B) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Mobile Safari/537.36"
+    - "Mozilla/5.0 (Linux; Android 11; SM-N975F) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/118.0.0.0 Mobile Safari/537.36"
+
+    # 小米手机
+    - "Mozilla/5.0 (Linux; Android 13; 22121211G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Mobile Safari/537.36"
+    - "Mozilla/5.0 (Linux; Android 12; M2102J20SG) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Mobile Safari/537.36"
+
+    # OPPO/Vivo/Realme
+    - "Mozilla/5.0 (Linux; Android 13; CPH2449) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Mobile Safari/537.36"
+    - "Mozilla/5.0 (Linux; Android 12; V2158) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Mobile Safari/537.36"
+    - "Mozilla/5.0 (Linux; Android 13; RMX3511) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Mobile Safari/537.36"
+
+    # OnePlus
+    - "Mozilla/5.0 (Linux; Android 13; LE2115) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Mobile Safari/537.36"
+    - "Mozilla/5.0 (Linux; Android 12; KB2001) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Mobile Safari/537.36"
+
+    # 华为/Honor
+    - "Mozilla/5.0 (Linux; Android 12; ELS-NX9) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Mobile Safari/537.36"
+    - "Mozilla/5.0 (Linux; Android 11; JER-NX9) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/118.0.0.0 Mobile Safari/537.36"
+
+    # 海外手机
+    - "Mozilla/5.0 (Linux; Android 13; Pixel 7 Pro) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Mobile Safari/537.36"
+    - "Mozilla/5.0 (Linux; Android 12; moto g stylus 5G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Mobile Safari/537.36"
+    - "Mozilla/5.0 (Linux; Android 11; LM-Q720) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/118.0.0.0 Mobile Safari/537.36"
+    - "Mozilla/5.0 (Linux; Android 13; SCG02) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Mobile Safari/537.36"
+
+    # iPhone 各型号
+    - "Mozilla/5.0 (iPhone; CPU iPhone OS 17_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/17.1 Mobile/15E148 Safari/604.1"
+    - "Mozilla/5.0 (iPhone; CPU iPhone OS 16_7_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/16.0 Mobile/15E148 Safari/604.1"
+    - "Mozilla/5.0 (iPhone; CPU iPhone OS 15_8 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/15.0 Mobile/15E148 Safari/604.1"
+
+    # Apple Watch
+    - "Mozilla/5.0 (iPhone; CPU iPhone OS 17_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 WatchApp/1"
+    - "Mozilla/5.0 (Apple Watch; U; CPU Watch OS 9_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko)"
+
+    # Wear OS (Google)
+    - "Mozilla/5.0 (Linux; Android 12; SmartWatch) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Mobile Safari/537.36"
+    - "Mozilla/5.0 (Linux; Android 11; Wear OS by Google) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/118.0.0.0 Mobile Safari/537.36"
+
+    # Samsung Galaxy Watch
+    - "Mozilla/5.0 (Linux; Tizen 5.5; SAMSUNG SM-R865) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/1.6 Mobile Safari/537.36"
+    - "Mozilla/5.0 (Linux; Tizen 6.0; SAMSUNG SM-R870) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/1.8 Mobile Safari/537.36"
+
+    # Garmin
+    - "Mozilla/5.0 (X11; Garmin Connect; U; StreamingAgent) AppleWebKit/537.36 (KHTML, like Gecko) Mobile Safari/537.36"
+
+    # Windows 上的 Chrome
+    - "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Safari/537.36"
+    - "Mozilla/5.0 (Windows NT 11.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36"
+    - "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/118.0.0.0 Safari/537.36"
+
+    # macOS 上的 Chrome
+    - "Mozilla/5.0 (Macintosh; Intel Mac OS X 13_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36"
+    - "Mozilla/5.0 (Macintosh; Intel Mac OS X 14_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Safari/537.36"
+
+    # Linux 上的 Chrome
+    - "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/120.0.0.0 Chrome/120.0.0.0 Safari/537.36"
+    - "Mozilla/5.0 (X11; Fedora; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Safari/537.36"
+
+    # Windows 上的 Firefox
+    - "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:120.0) Gecko/20100101 Firefox/120.0"
+    - "Mozilla/5.0 (Windows NT 11.0; Win64; x64; rv:119.0) Gecko/20100101 Firefox/119.0"
+    - "Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:118.0) Gecko/20100101 Firefox/118.0"
+
+    # macOS 上的 Firefox
+    - "Mozilla/5.0 (Macintosh; Intel Mac OS X 13.6; rv:120.0) Gecko/20100101 Firefox/120.0"
+    - "Mozilla/5.0 (Macintosh; Intel Mac OS X 14.1; rv:119.0) Gecko/20100101 Firefox/119.0"
+
+    # Linux 上的 Firefox
+    - "Mozilla/5.0 (X11; Linux x86_64; rv:120.0) Gecko/20100101 Firefox/120.0"
+    - "Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:119.0) Gecko/20100101 Firefox/119.0"
+
+    # Android 上的 Firefox
+    - "Mozilla/5.0 (Android 13; Mobile; rv:120.0) Gecko/120.0 Firefox/120.0"
+    - "Mozilla/5.0 (Android 12; Tablet; rv:119.0) Gecko/119.0 Firefox/119.0"
+
+    # Windows 上的 Edge
+    - "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36 Edg/120.0.0.0"
+    - "Mozilla/5.0 (Windows NT 11.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Safari/537.36 Edg/119.0.0.0"
+    - "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/118.0.0.0 Safari/537.36 Edg/118.0.0.0"
+
+    # macOS 上的 Edge
+    - "Mozilla/5.0 (Macintosh; Intel Mac OS X 13_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36 Edg/120.0.0.0"
+    - "Mozilla/5.0 (Macintosh; Intel Mac OS X 14_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Safari/537.36 Edg/119.0.0.0"
+
+    # Android/iOS 上的 Edge
+    - "Mozilla/5.0 (Linux; Android 13; K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Mobile Safari/537.36 EdgA/120.0.0.0"
+    - "Mozilla/5.0 (iPhone; CPU iPhone OS 17_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) EdgiOS/120.0.0.0 Mobile/15E148 Safari/602.1"
+
+
+
+
+
   # 代理配置（可选）
   proxy: null  # 例如: "http://127.0.0.1:8080"
   use_tor: false
