chore(config): 更新配置文件和忽略规则
- 在 .gitignore 中添加 *.txt 文件类型的忽略规则
- 将 config.yaml 中的代理配置从 null 改为 http://127.0.0.1:7897
- 在 README.md 中补充关于 User-Agent 列表的说明信息

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -118,7 +118,7 @@ scanning:
 
 
   # 代理配置（可选）
-  proxy: null  # 例如: "http://127.0.0.1:8080"
+  proxy: http://127.0.0.1:7897  # 例如: "http://127.0.0.1:8080"
   use_tor: false
 
 # 网络扫描配置
